--- a/python/flask-yummly/requirements.txt
+++ b/python/flask-yummly/requirements.txt
@@ -5,6 +5,9 @@ Werkzeug==0.9.4
 certifi==14.05.14
 gunicorn==19.1.1
 itsdangerous==0.24
+mock==1.0.1
 nose==1.3.4
 requests==2.4.0
+responses==0.2.2
+six==1.7.3
 wsgiref==0.1.2
