--- a/angular/projects/countries-capitals/package.json
+++ b/angular/projects/countries-capitals/package.json
@@ -1,26 +1,21 @@
 {
   "name": "countries-capitals",
   "version": "0.0.1",
+  "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "karma": "^0.12.22",
-    "karma-jasmine": "^0.1.5"
-  },
-  "devDependencies": {
-    "gulp": "^3.8.6",
-    "gulp-jshint": "^1.6.4",
-    "gulp-clean": "^0.3.1",
-    "gulp-connect": "^2.0.5",
-    "gulp-minify-css": "^0.3.6",
-    "gulp-minify-html": "^0.1.4",
-    "gulp-rev": "^0.4.1",
-    "gulp-sass": "^0.7.1",
-    "gulp-uglify": "^0.3.1",
-    "gulp-usemin": "^0.3.5",
-    "gulp-util": "^2.2.19",
-    "karma-chrome-launcher": "^0.1.4"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "gulp-uglify": "^0.3.1",
+    "gulp-minify-css": "^0.3.7",
+    "gulp-clean": "^0.3.1",
+    "gulp-connect": "^2.0.6",
+    "gulp-jshint": "^1.8.4",
+    "gulp": "^3.8.7",
+    "bower": "^1.3.9",
+    "gulp-concat": "^2.3.4"
   }
 }
