--- a/angular/projects/countries-capitals/.gitignore
+++ b/angular/projects/countries-capitals/.gitignore
@@ -1,21 +1,5 @@
-/build/
 .DS_Store
-gen_docs.disable
-test.disable
-regression/temp*.html
-performance/temp*.html
-.idea/workspace.xml
-*~
-*.swp
-angular.js.tmproj
-/node_modules/
-/components/
-/bower_components/
-angular.xcodeproj
-.idea
-.agignore
-libpeerconnection.log
+dist/
+node_modules/
+bower_components/
 npm-debug.log
-/tmp/
-/scripts/bower/bower-*
-bower_components
