--- a/angular/projects/countries-capitals/package.json
+++ b/angular/projects/countries-capitals/package.json
@@ -16,6 +16,9 @@
     "gulp-jshint": "^1.8.4",
     "gulp": "^3.8.7",
     "bower": "^1.3.9",
-    "gulp-concat": "^2.3.4"
+    "gulp-concat": "^2.3.4",
+    "karma-chrome-launcher": "^0.1.4",
+    "jasmine": "^2.0.1",
+    "karma": "^0.12.23"
   }
 }
