--- a/angular/projects/angular-flashcards/package.json
+++ b/angular/projects/angular-flashcards/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calendar-directive",
+  "name": "angular-flashcards",
   "version": "0.0.1",
   "description": "",
   "main": "gulpfile.js",
