--- a/angular/projects/angular-flashcards/bower.json
+++ b/angular/projects/angular-flashcards/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "~1.2.22",
     "bootstrap": "~3.2.0",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-local-storage": "~0.1.1"
   }
 }
