--- a/python/flask-yummly/requirements.txt
+++ b/python/flask-yummly/requirements.txt
@@ -1,7 +1,9 @@
 Flask==0.10.1
+Flask-WTF==0.10.2
 Jinja2==2.7.2
 MarkupSafe==0.21
-Werkzeug==0.9.4
+WTForms==2.0.1
+Werkzeug==0.9.6
 certifi==14.05.14
 gunicorn==19.1.1
 itsdangerous==0.24
