--- a/angular/projects/countries_capitals/package.json
+++ b/angular/projects/countries_capitals/package.json
@@ -11,6 +11,10 @@
     "gulp-connect": "^2.2.0",
     "gulp-jshint": "^1.10.0",
     "gulp-minify-css": "^1.1.0",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "jasmine-core": "^2.3.0",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.8",
+    "karma-jasmine": "^0.3.5"
   }
 }
